Linked api to app.
- Made changes in README.
- Updated config_env.
- Deleted baggage.

--- a/views/tokens.slim
+++ b/views/tokens.slim
@@ -23,7 +23,7 @@ form action='/tokens' method='post'
     tr
       td
         | Canvas URL: 
-        input type='url' name='url' size=50
+        input type='url' name='url' size=50 value='https://canvas.instructure.com/'
     tr
       td
         input type='submit' value='Submit'
