--- a/views/discussion_topics.slim
+++ b/views/discussion_topics.slim
@@ -1,29 +1,12 @@
 include scripts
 script src='//code.highcharts.com/modules/exporting.js'
-- DATE = 0..9 # Use 9 to group by date, -1 to leave times in there
-- unless data.all? { |dat| dat.nil? || dat.empty? || dat == 'null' }
-  - comments = data.map { |dat| JSON.parse(dat)['view'] unless dat == 'null' }
-  - discussions = Hash.new(0)
-  - discussions_id = Hash.new(0)
-  - comments.each do |comment|
-    - unless comment.empty?
-      - comment.each do |comms| \
-          discussions[comms['created_at'][DATE]] += 1 unless comms['deleted'] == true; \
-          discussions_id["user_#{comms['user_id']}"] += 1 unless comms['deleted'] == true; \
-          unless comms['replies'].nil?; \
-            comms['replies'].each do |reply| \
-              discussions[reply['created_at'][DATE]] += 1 unless reply['deleted'] == true; \
-              discussions_id["user_#{reply['user_id']}"] += 1 unless reply['deleted'] == true; \
-            end \
-          end \
-        end
-  h3 Discussions over time
-  - discussions = Hash[discussions.sort]
-  == column_chart discussions
-  - discussions_id = Hash[discussions_id.sort_by { |u, c| c }.reverse]
-  / == line_chart discussions_id, discrete: true
-  h3 Dicussions by Participant
-  - discussion_height = discussions_id.length * 30
-  == bar_chart discussions_id, height: "#{discussion_height}px"
-- else
+- if data.values[0] == 'No discussion available'
   br No discussions available
+- else
+  - discussions = data['discussions']
+  - discussions_id = data['discussions_id']
+  - discussion_height = data['discussion_height']
+  h3 Discussions over time
+  == column_chart discussions
+  h3 Dicussions by Participant
+  == bar_chart discussions_id, height: "#{discussion_height}px"
