--- a/views/users.slim
+++ b/views/users.slim
@@ -1,39 +1,8 @@
 / Use views to select in the long chart
 
 include scripts
-- days_of_week = %w(Sunday Monday Tuesday Wednesday Thursday Friday Saturday)
-- views_dow = {}
-- participations_dow = {}
-- data.each do |user| \
-  unless user.nil? then \
-    user.each do |user_id, v| \
-      JSON.parse(v).each do |item, views_particapations| \
-        if item == 'page_views' then \
-          temp_store = Hash.new 0; \
-          days_of_week.each { |day| temp_store[day] = 0 }; \
-          views_particapations.each do |date, view_count| \
-            dow = Date.parse(date).strftime('%A'); \
-            temp_store[dow] += view_count; \
-          end; \
-          views_dow[user_id] = temp_store; \
-        elsif item == 'participations' then \
-          temp_store = Hash.new 0; \
-          days_of_week.each { |day| temp_store[day] = 0 }; \
-          views_particapations.each do |hash| \
-            day_of_week = hash.first[1]; \
-            dow = Date.parse(day_of_week).strftime('%A'); \
-            hash.each do |key, value| \
-              if key == 'url' then \
-                if value.include? 'discussion_topics' then \
-                  temp_store[dow] += 1; \
-                end; end; end; \
-          end; \
-          participations_dow[user_id] = temp_store; \
-        end; end; end; end; \
-  end
 
-- views_dow.each do |k, v|
-  - views_dow[k] = [views_dow[k], participations_dow[k]]
+- views_dow = data['views_dow']
 
 div id="result"
 table id="table-sparkline"
