--- a/views/dashboard.slim
+++ b/views/dashboard.slim
@@ -4,128 +4,29 @@ link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootst
 script src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'
 
 / Activity
-- views = {}
-- activities.each { |activity| views[activity['date']] = activity['views'] }
-- views = Hash[views.sort]
-- participations = Hash.new(0)
-- activities.each { |activity| participations[activity['date']] = activity['participations'] }
-- participations = Hash[participations.sort]
-- v_p = [{name: 'Participations', data: participations}, {name: 'Views', data: views}]
-- views_participation = {}
-- activities.each do |activity| \
-    views_participation[activity['date']] = [activity['views'], activity['participations']] \
-  end
-- views_participation_dow = Hash.new { |hash, key| hash[key] = [] }
-- views_participation.each do |date, _view_par| \
-    dow = Date.parse(date).strftime('%A'); \
-    views_participation_dow[dow] << views_participation[date]; \
-  end
-- views_by_day = {}
-- participations_by_day = {}
-- Date::DAYNAMES.each { |day| views_by_day[day] = 0; participations_by_day[day] = 0 }
-- views_participation_dow.each do |day, view_par| \
-    views_by_day[day] = views_participation_dow[day].map { |arr| arr[0] }.reduce(:+); \
-    participations_by_day[day] = views_participation_dow[day].map { |arr| arr[1] }.reduce(:+); \
-  end
+- views_by_day = activities['views_by_day']
+- participations_by_day = activities['participations_by_day']
+- v_p = activities['v_p']
 
 / Assignments
-- tardiness = {}
-- tardiness[:missing] = {}
-- tardiness[:late] = {}
-- tardiness[:on_time] = {}
-- assignments = assignments.sort_by { |k, _v| k['due_at'] } unless assignments.any? { |k, _v| k['due_at'].nil? }
-- assignments.each do |assignment| \
-    tardiness[:missing][assignment['title']] = [assignment['tardiness_breakdown']['missing'], assignment['tardiness_breakdown']['total']]; \
-    tardiness[:late][assignment['title']] = [assignment['tardiness_breakdown']['late'], assignment['tardiness_breakdown']['total']]; \
-    tardiness[:on_time][assignment['title']] = [assignment['tardiness_breakdown']['on_time'], assignment['tardiness_breakdown']['total']]; \
-  end
-- tardiness[:missing].delete_if { |key, _| key.nil? }
-- tardiness[:late].delete_if { |key, _| key.nil? }
-- tardiness[:on_time].delete_if { |key, _| key.nil? }
-- tardiness[:missing] = Hash[tardiness[:missing].map { |k, v| [k, v[0] * v[1]] }]
-- tardiness[:late] = Hash[tardiness[:late].map { |k, v| [k, v[0] * v[1]] }]
-- tardiness[:on_time] = Hash[tardiness[:on_time].map { |k, v| [k, v[0] * v[1]] }]
-- tard = [{ name: 'Missing Submissions', data: tardiness[:missing] }, \
-          { name: 'Late Submissions', data: tardiness[:late] }, \
-          { name: 'On Time Submissions', data: tardiness[:on_time] }]
-
-- scores = {}
-- assignments.each { |assignment| scores[assignment['title']] =[\
-              assignment['min_score'], assignment['first_quartile'],\
-              assignment['median'], assignment['third_quartile'],\
-              assignment['max_score']] }
-- scores.delete_if { |key, value| key.nil? || value.any?(&:nil?) }
-- scores_percent = {}
-- assignments.each { |assignment| scores_percent[assignment['title']] =[\
-              assignment['min_score'], assignment['first_quartile'],\
-              assignment['median'], assignment['third_quartile'],\
-              assignment['max_score'], assignment['points_possible']] }
-- scores_percent.delete_if { |key, value| key.nil? || value.any?(&:nil?) }
-- scores_percent.each do |key, values| \
-    scores_percent[key] = values.map.each_with_index do |value, index| \
-      value = (value / values[5].to_f * 100).round 2 unless index == 5 \
-    end.compact \
-  end
+- tard = assignments['tard']
+- scores = assignments['scores']
+- scores_percent = assignments['scores_percent']
 
 / Dicussions
-- discussions = {}
-- discussions_id = {}
-- discussion_height = 0
-- discussions_has_content = true
-- DATE = 0..9 # Use 9 to group by date, -1 to leave times in there
-- unless discussions_list.all? { |dat| dat.nil? || dat.empty? || dat == 'null' }
-  - comments = discussions_list.map { |dat| JSON.parse(dat)['view'] unless dat == 'null' }
-  - discussions = Hash.new(0)
-  - discussions_id = Hash.new(0)
-  - comments.each do |comment|
-    - unless comment.empty?
-      - comment.each do |comms| \
-          discussions[comms['created_at'][DATE]] += 1 unless comms['deleted'] == true; \
-          discussions_id["user_#{comms['user_id']}"] += 1 unless comms['deleted'] == true; \
-          unless comms['replies'].nil?; \
-            comms['replies'].each do |reply| \
-              discussions[reply['created_at'][DATE]] += 1 unless reply['deleted'] == true; \
-              discussions_id["user_#{reply['user_id']}"] += 1 unless reply['deleted'] == true; \
-            end \
-          end \
-        end
-  - discussions = Hash[discussions.sort]
-  - discussions_id = Hash[discussions_id.sort_by { |u, c| c }.reverse]
-  - discussion_height = discussions_id.length * 30
-- else
+- if discussions_list.values[0] == 'No discussion available'
   - discussions_has_content = false
+- else
+  - discussions_has_content = true
+  - discussions = discussions_list['discussions']
+  - discussions_id = discussions_list['discussions_id']
+  - discussion_height = discussions_list['discussion_height']
 
 / Student Summaries
-- summaries_tardiness = {}
-- page_views = {}
-- summaries_participations = {}
-- page_part_scatter = {}
-- summaries_tardiness[:missing] = {}
-- summaries_tardiness[:late] = {}
-- summaries_tardiness[:on_time] = {}
-- summaries_tardiness[:floating] = {}
-- student_summaries.each do |user| \
-    summaries_tardiness[:missing]["user_#{user['id']}"] = user['tardiness_breakdown']['missing']; \
-    summaries_tardiness[:late]["user_#{user['id']}"] = user['tardiness_breakdown']['late']; \
-    summaries_tardiness[:on_time]["user_#{user['id']}"] = user['tardiness_breakdown']['on_time']; \
-    summaries_tardiness[:floating]["user_#{user['id']}"] = user['tardiness_breakdown']['floating']; \
-    page_views["user_#{user['id']}"] = user['page_views']; \
-    summaries_participations["user_#{user['id']}"] = user['participations']; \
-    page_part_scatter["user_#{user['id']}"] = [user['page_views'], user['participations']] \
-  end
-- summaries_tard = [{ name: 'Late Submissions', data: summaries_tardiness[:late].sort_by { |user, value| value }.reverse.to_h }, \
-                    { name: 'Missing Submissions', data: summaries_tardiness[:missing] }, \
-                    { name: 'Floating', data: summaries_tardiness[:floating] }, \
-                    { name: 'On Time Submissions', data: summaries_tardiness[:on_time] }]
-- summaries_height = [summaries_tardiness[:late].length, summaries_tardiness[:missing].length, summaries_tardiness[:floating].length, summaries_tardiness[:on_time].length].max * 30
-- pages_height = page_views.length * 30
-- participations_height = summaries_participations.length * 30
-- views_pars_height = [page_views.length, summaries_participations.length].max * 30
-- views_pars = [{name: 'Views', data: page_views}, {name: 'Participations', data: summaries_participations }]
-- views_pars.each do |view_par| \
-    view_par[:data] = Hash[view_par[:data].sort_by { |u, c| c }.reverse]; \
-  end
-
+- summaries_tard = student_summaries['tard']
+- summaries_height = student_summaries['summaries_height']
+- views_pars = student_summaries['views_pars']
+- views_pars_height = student_summaries['views_pars_height']
 
 div class='row'
   h2 align='center' Participations & Views
@@ -212,13 +113,6 @@ javascript:
   var values = JSON.parse("#{scores.values}");
   var cat_percent = JSON.parse("#{scores_percent.keys}".replace(/&quot;/g, '"').replace(/amp;/g, ''));
   var values_percent = JSON.parse("#{scores_percent.values}");
-  var sunday = JSON.parse("#{views_participation_dow['Sunday']}");
-  var monday = JSON.parse("#{views_participation_dow['Monday']}");
-  var tuesday = JSON.parse("#{views_participation_dow['Tuesday']}");
-  var wednesday = JSON.parse("#{views_participation_dow['Wednesday']}");
-  var thursday = JSON.parse("#{views_participation_dow['Thursday']}");
-  var friday = JSON.parse("#{views_participation_dow['Friday']}");
-  var saturday = JSON.parse("#{views_participation_dow['Saturday']}");
   var dow = JSON.parse("#{views_by_day.keys}".replace(/&quot;/g, '"').replace(/amp;/g, ''));
   var views_by_day = JSON.parse("#{views_by_day.values}");
   var participations_by_day = JSON.parse("#{participations_by_day.values}");
