--- a/views/assignments.slim
+++ b/views/assignments.slim
@@ -3,7 +3,7 @@
 include scripts
 script src='//code.highcharts.com/modules/exporting.js'
 - if data.values[0] == 'No assignment found'
-  h3 No Assignments found
+  h3 No Assignment found
 - else
   h2 Assignments
   h3 Information about lateness
