--- a/views/student_summaries.slim
+++ b/views/student_summaries.slim
@@ -25,28 +25,4 @@ javascript:
       stacked_div = document.getElementById('bar-chart-stacked'),
       discrete_div = document.getElementById('bar-chart-discrete');
 
-  function changeChart() {
-      "use strict";
-      if (radios[0].checked == true) {
-          stacked_div.style.display = 'inline';
-          discrete_div.style.display = 'none';
-      } else if (radios[1].checked == true) {
-          stacked_div.style.display = 'none';
-          discrete_div.style.display = 'inline';
-      }
-  }
-
-  var radio,
-      idx;
-
-  for (idx = 0; idx < radios.length; idx += 1) {
-      radio = radios[idx];
-      radio.onclick = changeChart;
-  }
-
-  function clickRegular() {
-      radios[1].checked = true;
-      stacked_div.style.display = 'none';
-  }
-
-  window.addEventListener('load', setTimeout(clickRegular, 1000));
+script src='/student_summaries.js'
